--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,6 @@
+-
+  image: Visual Studio 2017
+
 # configuration for "master" branch
 # build in Release mode and deploy to Nuget
 -
@@ -5,16 +8,20 @@
     only:
       - master
   configuration: Release
-  platform: Any CPU
   nuget:
     disable_publish_on_pr: true
+  install:
+    - ps: .\Tools\Appveyor\install_dotnet_devpack.ps1
   before_build:
-    - ps: nuget restore .\Routine.sln
+    - dotnet restore .\Routine.sln
+  build_script:
+    - dotnet build .\Routine.sln
+  test:
+    assemblies:
+      only:
+        - .\Routine\Routine.Test\bin\Release\$(configuration)\Routine.Test.dll
   after_test:
-    - ps: .\Tools\NuGet\BuildNugetPackage.ps1
-
-  build:
-    project: .\Routine.sln 
+    - ps: .\Routine\Scripts\BuildNugetPackage.ps1
 
   deploy:
     # The following is the details allowing for appveyor to push the 
@@ -22,7 +29,7 @@
   - provider: NuGet
     name: production
     api_key: 
-      secure: TztsFHaGhIPL2k1ZLIsKg/PACVY7NxAIc8ZQQo20zK3YYj7ZUcdYJ9bsxQRHXOGA
+      secure: 0uEiB3xE0Pxwlk20sxtf+Vy9WZQrbA2XYIbZbvQZficGLgJ7u8Cvcfu/t2T/rlmq
     on:
       branch: master
       APPVEYOR_REPO_TAG: true
@@ -36,14 +43,18 @@
     only:
       - develop
   configuration: Release
-  platform: Any CPU
   nuget:
     disable_publish_on_pr: true
+  install:
+    - ps: .\Tools\Appveyor\install_dotnet_devpack.ps1
   before_build:
-    - ps: nuget restore .\Routine.sln
-  build:
-    project: .\Routine.sln
-    verbosity: detailed
+    - dotnet restore .\Routine.sln
+  build_script:
+    - dotnet build .\Routine.sln
+  test:
+    assemblies:
+      only:
+        - .\Routine\Routine.Test\bin\Release\$(configuration)\Routine.Test.dll
 
 # configuration for all other branches except "master" and "develop"
 # build in Debug mode and deploy locally for testing
@@ -53,10 +64,15 @@
       - master
       - develop
   configuration: Release
-  platform: Any CPU
+  install:
+    - ps: .\Tools\Appveyor\install_dotnet_devpack.ps1
   before_build:
-    - ps: nuget restore .\Routine.sln
-  build:
-    project: .\Routine.sln
+    - dotnet restore .\Routine.sln
+  build_script:
+    - dotnet build .\Routine.sln
+  test:
+    assemblies:
+      only:
+        - .\Routine\Routine.Test\bin\Release\$(configuration)\Routine.Test.dll
   after_test:
-    - ps: .\Tools\NuGet\BuildNugetPackage.ps1
+    - ps: .\Routine\Scripts\BuildNugetPackage.ps1
