--- a/test/Routine.Test.Performance/Routine.Test.Performance.csproj
+++ b/test/Routine.Test.Performance/Routine.Test.Performance.csproj
@@ -34,23 +34,23 @@
 	<ItemGroup>
 		<Reference Include="System" />
 		<Reference Include="nunit.framework">
-			<HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+			<HintPath>..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
 		</Reference>
 		<Reference Include="Moq">
-			<HintPath>..\packages\Moq.4.2.1312.1622\lib\net40\Moq.dll</HintPath>
+			<HintPath>..\..\packages\Moq.4.2.1312.1622\lib\net40\Moq.dll</HintPath>
 		</Reference>
 		<Reference Include="System.Core" />
 		<Reference Include="System.Web.Extensions" />
 		<Reference Include="System.Xml" />
 		<Reference Include="Fasterflect">
-			<HintPath>..\packages\fasterflect.2.1.3\lib\net40\Fasterflect.dll</HintPath>
+			<HintPath>..\..\packages\fasterflect.2.1.3\lib\net40\Fasterflect.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="packages.config" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\Routine\Routine.csproj">
+		<ProjectReference Include="..\..\src\Routine\Routine.csproj">
 			<Project>{A597022C-F6DD-495F-A846-290EEDE08B9D}</Project>
 			<Name>Routine</Name>
 		</ProjectReference>
