--- a/test/Routine.Test/Routine.Test.csproj
+++ b/test/Routine.Test/Routine.Test.csproj
@@ -36,10 +36,10 @@
 	<ItemGroup>
 		<Reference Include="System" />
 		<Reference Include="Moq">
-			<HintPath>..\packages\Moq.4.2.1312.1622\lib\net40\Moq.dll</HintPath>
+			<HintPath>..\..\packages\Moq.4.2.1312.1622\lib\net40\Moq.dll</HintPath>
 		</Reference>
 		<Reference Include="nunit.framework">
-			<HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+			<HintPath>..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
 		</Reference>
 		<Reference Include="System.Core" />
 		<Reference Include="System.Web" />
@@ -57,11 +57,11 @@
 		<None Include="packages.config" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\Routine\Routine.csproj">
+		<ProjectReference Include="..\..\src\Routine\Routine.csproj">
 			<Project>{A597022C-F6DD-495F-A846-290EEDE08B9D}</Project>
 			<Name>Routine</Name>
 		</ProjectReference>
-		<ProjectReference Include="..\Routine.Test.Common\Routine.Test.Common.csproj">
+		<ProjectReference Include="..\..\samples\Routine.Test.Common\Routine.Test.Common.csproj">
 			<Project>{0A8536E8-84A1-4D0D-8AF3-34785725E56B}</Project>
 			<Name>Routine.Test.Common</Name>
 		</ProjectReference>
