--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -38,10 +38,13 @@
 	  <None Remove="Service\TestApp\assets\js\httpVueLoader.js" />
 	  <None Remove="Service\TestApp\assets\js\lodash.min.js" />
 	  <None Remove="Service\TestApp\vue\index.html" />
+	  <None Remove="Service\TestApp\vue\src\components\json-cell.vue" />
+	  <None Remove="Service\TestApp\vue\src\components\json-table.vue" />
 	  <None Remove="Service\TestApp\vue\src\components\parameter-value.vue" />
 	  <None Remove="Service\TestApp\vue\src\components\Parameter.vue" />
 	  <None Remove="Service\TestApp\vue\src\filters\string-filter.js" />
 	  <None Remove="Service\TestApp\vue\src\index.js" />
+	  <None Remove="Service\TestApp\vue\src\store\index.store.js" />
 	  <None Remove="Service\TestApp\vue\src\string-filter.js" />
 	</ItemGroup>
 
@@ -61,10 +64,13 @@
 		<EmbeddedResource Include="Service\TestApp\assets\js\lodash.min.js" />
 		<EmbeddedResource Include="Service\TestApp\vue\index.html" />
 		<EmbeddedResource Include="Service\TestApp\assets\js\vue.min.js" />
+		<EmbeddedResource Include="Service\TestApp\vue\src\components\json-cell.vue" />
+		<EmbeddedResource Include="Service\TestApp\vue\src\components\json-table.vue" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\components\parameter.vue" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\components\parameter-value.vue" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\filters\string-filter.js" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\index.js" />
+		<EmbeddedResource Include="Service\TestApp\vue\src\store\index.store.js" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="Api\Template\ClientApiTemplate.tt">
