--- a/src/Routine/Routine.csproj
+++ b/src/Routine/Routine.csproj
@@ -35,17 +35,11 @@
 
 	<ItemGroup>
 	  <None Remove="Service\TestApp\assets\js\axios.min.js" />
+	  <None Remove="Service\TestApp\assets\js\es6-promise.auto.js" />
 	  <None Remove="Service\TestApp\assets\js\httpVueLoader.js" />
 	  <None Remove="Service\TestApp\assets\js\lodash.min.js" />
-	  <None Remove="Service\TestApp\vue\index.html" />
-	  <None Remove="Service\TestApp\vue\src\components\json-cell.vue" />
-	  <None Remove="Service\TestApp\vue\src\components\json-table.vue" />
-	  <None Remove="Service\TestApp\vue\src\components\parameter-value.vue" />
-	  <None Remove="Service\TestApp\vue\src\components\Parameter.vue" />
-	  <None Remove="Service\TestApp\vue\src\filters\string-filter.js" />
-	  <None Remove="Service\TestApp\vue\src\index.js" />
-	  <None Remove="Service\TestApp\vue\src\store\index.store.js" />
-	  <None Remove="Service\TestApp\vue\src\string-filter.js" />
+	  <None Remove="Service\TestApp\assets\js\vuex.min.js" />
+	  <None Remove="Service\TestApp\vue\src\shared.js" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -60,8 +54,10 @@
 	<ItemGroup>
 		<EmbeddedResource Include="Service\TestApp\app\application\index.html" />
 		<EmbeddedResource Include="Service\TestApp\assets\js\axios.min.js" />
+		<EmbeddedResource Include="Service\TestApp\assets\js\es6-promise.auto.js" />
 		<EmbeddedResource Include="Service\TestApp\assets\js\httpVueLoader.js" />
 		<EmbeddedResource Include="Service\TestApp\assets\js\lodash.min.js" />
+		<EmbeddedResource Include="Service\TestApp\assets\js\vuex.min.js" />
 		<EmbeddedResource Include="Service\TestApp\vue\index.html" />
 		<EmbeddedResource Include="Service\TestApp\assets\js\vue.min.js" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\components\json-cell.vue" />
@@ -70,6 +66,7 @@
 		<EmbeddedResource Include="Service\TestApp\vue\src\components\parameter-value.vue" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\filters\string-filter.js" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\index.js" />
+		<EmbeddedResource Include="Service\TestApp\vue\src\shared.js" />
 		<EmbeddedResource Include="Service\TestApp\vue\src\store\index.store.js" />
 	</ItemGroup>
 	<ItemGroup>
@@ -101,6 +98,9 @@
 		<Folder Include="Scripts\" />
 		<Folder Include="Service\TestApp\assets\img\" />
 		<Folder Include="Service\TestApp\assets\lib\" />
+		<Folder Include="Service\TestApp\vue\src\components\" />
+		<Folder Include="Service\TestApp\vue\src\filters\" />
+		<Folder Include="Service\TestApp\vue\src\store\" />
 	</ItemGroup>
 	<ItemGroup>
 		<EmbeddedResource Include="Service\TestApp\app\config.router.js" />
